// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing shows admin user details 1`] = `
<div
  className="user"
  style={
    Object {
      "float": "right",
      "marginRight": "-25px",
    }
  }
>
  <span
    className="submenu-title-wrapper ant-dropdown-trigger"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <span
      className="ant-tag ant-tag-green user-admin"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      admin
    </span>
    <i
      aria-label="icon: user"
      className="anticon anticon-user"
      style={
        Object {
          "color": "#FFF",
          "marginRight": "5px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="user"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </i>
    <span
      aria-label={null}
      className="ant-typography user-displayName"
      style={
        Object {
          "WebkitLineClamp": null,
          "color": "#FFF",
          "marginRight": "10px",
        }
      }
    >
      Joe Bloggs
    </span>
    <i
      aria-label="icon: down"
      className="anticon anticon-down"
      style={
        Object {
          "color": "#FFF",
        }
      }
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </span>
</div>
`;

exports[`Snapshot testing shows non-admin user details 1`] = `
<div
  className="user"
  style={
    Object {
      "float": "right",
      "marginRight": "-25px",
    }
  }
>
  <span
    className="submenu-title-wrapper ant-dropdown-trigger"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <i
      aria-label="icon: user"
      className="anticon anticon-user"
      style={
        Object {
          "color": "#FFF",
          "marginRight": "5px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="user"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </i>
    <span
      aria-label={null}
      className="ant-typography user-displayName"
      style={
        Object {
          "WebkitLineClamp": null,
          "color": "#FFF",
          "marginRight": "10px",
        }
      }
    >
      Joe Bloggs
    </span>
    <i
      aria-label="icon: down"
      className="anticon anticon-down"
      style={
        Object {
          "color": "#FFF",
        }
      }
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </span>
</div>
`;
